--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,7 @@
+@tailwind preflight;
+@tailwind components;
+@tailwind utilities;
+
 body {
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
