--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,11 @@
 @tailwind preflight;
 @tailwind components;
-@tailwind utilities;
+
+/**
+ * Here you would add any of your custom classes; stuff that you'd
+ * want loaded *before* the utilities so that the utilities could still
+ * override them.
+ */
 
 body {
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
@@ -10,3 +15,5 @@ body {
   color: #2c3e50;
   margin-top: 60px;
 }
+
+@tailwind utilities;
