--- a/templates/index.twig
+++ b/templates/index.twig
@@ -4,23 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>{{ siteName }}</title>
 
-  {% if not craft.config.devMode %}
+  {% if not getenv('ENVIRONMENT') == 'dev' and not getenv('ENVIRONMENT') == 'local' %}
     <link rel="stylesheet" href="{{ rev('app.css') }}">
   {% endif %}
-
 </head>
+
 <body>
   <div id="app">
     <hello-world />
   </div>
 
-  {% if craft.config.devMode %}
+  {% if getenv('ENVIRONMENT') == 'dev' or getenv('ENVIRONMENT') == 'local' %}
     <script src="http://localhost:8080/app.js"></script>
   {% else %}
-    <script src="{{ rev('manifest.js') }}"></script>
-    <script src="{{ rev('vendor.js') }}"></script>
+    <script src="{{ rev('chunk-vendors.js') }}"></script>
     <script src="{{ rev('app.js') }}"></script>
   {% endif %}
 
