--- a/templates/index.twig
+++ b/templates/index.twig
@@ -11,7 +11,7 @@
   {% endif %}
 </head>
 
-<body>
+<body class="bg-grey-darkest">
   <div id="app">
     {% set info = {
       craftVersion: craft.app.getVersion(),
