CLL link in default template too

--- a/templates/index.html
+++ b/templates/index.html
@@ -199,7 +199,7 @@
 					<li><a href="https://docs.craftcms.com/api/v3/" target="_blank">Craft 3 Class Reference</a></li>
 					<li><a href="https://demo.craftcms.com/" target="_blank">Demo site</a></li>
 					<li><a href="https://craftcms.com/community#slack" target="_blank">Craft Slack</a></li>
-					<li><a href="https://craftcommerce.com/" target="_blank">Craft Commerce</a> <small>– First-party e-commerce platform for Craft.</small></li>
+					<li><a href="https://craftcommerce.com/" target="_blank">Craft Commerce</a></li>
 				</ul>
 
                 <h2>Community Resources</h2>
@@ -207,6 +207,7 @@
 					<li><a href="https://craftquest.io/" target="_blank">CraftQuest</a> <small>– Unlimited access to Craft training (and more) from Mijingo.</small></li>
 					<li><a href="https://webdesign.tutsplus.com/categories/craft-cms/courses" target="_blank">Envato Tuts+</a> <small>– Video courses.</small></li>
 					<li><a href="http://straightupcraft.com/" target="_blank">nystudio107 Blog</a> <small>– Articles about Craft and modern web development.</small></li>
+					<li><a href="http://craftlinklist.com/" target="_blank">Craft Link List</a> <small>– Bimonthly newsletter about the Craft ecosystem.</small></li>
 					<li><a href="http://craftcms.stackexchange.com/" target="_blank">Craft CMS Stack Exchange</a> <small>– Community-run Q&A for Craft developers.</small></li>
                 </ul>
             </div>
