Fixed nystudio107 blog links
fixes craftcms/cms#3387

--- a/templates/index.html
+++ b/templates/index.html
@@ -206,7 +206,7 @@
                 <ul>
 					<li><a href="https://craftquest.io/" target="_blank">CraftQuest</a> <small>– Unlimited access to Craft training (and more) from Mijingo.</small></li>
 					<li><a href="https://webdesign.tutsplus.com/categories/craft-cms/courses" target="_blank">Envato Tuts+</a> <small>– Video courses.</small></li>
-					<li><a href="http://straightupcraft.com/" target="_blank">nystudio107 Blog</a> <small>– Articles about Craft and modern web development.</small></li>
+					<li><a href="https://nystudio107.com/blog" target="_blank">nystudio107 Blog</a> <small>– Articles about Craft and modern web development.</small></li>
 					<li><a href="http://craftlinklist.com/" target="_blank">Craft Link List</a> <small>– Bimonthly newsletter about the Craft ecosystem.</small></li>
 					<li><a href="http://craftcms.stackexchange.com/" target="_blank">Craft CMS Stack Exchange</a> <small>– Community-run Q&A for Craft developers.</small></li>
                 </ul>
