Update the resource links

--- a/templates/index.html
+++ b/templates/index.html
@@ -185,7 +185,7 @@
                     front end, you can replace this with something custom.</p>
                 <p>If you’re new to Craft CMS, take some time to check out the resources on the right
                     when you get a chance&mdash;especially
-                    <a href="https://craftcms.com/community#slack" target="_blank">Slack</a>
+                    <a href="https://craftcms.com/discord" target="_blank">Discord</a>
                     and <a href="http://craftcms.stackexchange.com/" target="_blank">Stack Exchange</a>.
                     The Craft community is full of smart, friendly, and helpful people!</p>
                 <p><span class="go"><a href="{{ cpUrl('') }}">Go to your Control Panel</a></span></p>
@@ -193,22 +193,16 @@
         </div>
         <div id="aside">
             <div class="content">
-                <h2>Official Resources</h2>
+                <h2>Popular Resources</h2>
                 <ul>
-                    <li><a href="http://docs.craftcms.com/v3/" target="_blank">Craft 3 Documentation</a></li>
-                    <li><a href="https://docs.craftcms.com/api/v3/" target="_blank">Craft 3 Class Reference</a></li>
-                    <li><a href="https://demo.craftcms.com/" target="_blank">Demo site</a></li>
-                    <li><a href="https://craftcms.com/community#slack" target="_blank">Craft Slack</a></li>
-                    <li><a href="https://craftcommerce.com/" target="_blank">Craft Commerce</a></li>
-                </ul>
-
-                <h2>Community Resources</h2>
-                <ul>
-                    <li><a href="https://craftquest.io/" target="_blank">CraftQuest</a> <small>– Unlimited access to Craft training (and more) from Mijingo.</small></li>
-                    <li><a href="https://webdesign.tutsplus.com/categories/craft-cms/courses" target="_blank">Envato Tuts+</a> <small>– Video courses.</small></li>
-                    <li><a href="https://nystudio107.com/blog" target="_blank">nystudio107 Blog</a> <small>– Articles about Craft and modern web development.</small></li>
-                    <li><a href="http://craftlinklist.com/" target="_blank">Craft Link List</a> <small>– Bimonthly newsletter about the Craft ecosystem.</small></li>
-                    <li><a href="http://craftcms.stackexchange.com/" target="_blank">Craft CMS Stack Exchange</a> <small>– Community-run Q&A for Craft developers.</small></li>
+                    <li><a href="http://docs.craftcms.com/v3/" target="_blank">Documentation</a><br><small>Read the official docs.</small></li>
+                    <li><a href="https://craftcms.com/guides" target="_blank">Guides</a><br><small>Follow along with the official guides.</small></li>
+                    <li><a href="https://twitter.com/hashtag/craftcms" target="_blank">#craftcms</a><br><small>See the latest tweets about Craft.</small></li>
+                    <li><a href="https://craftcms.com/discord" target="_blank">Discord</a><br><small>Meet the community.</small></li>
+                    <li><a href="http://craftcms.stackexchange.com/" target="_blank">Stack Exchange</a><br><small>Get help and help others.</small></li>
+                    <li><a href="https://craftquest.io/" target="_blank">CraftQuest</a><br><small>Watch unlimited video lessons and courses.</small></li>
+                    <li><a href="http://craftlinklist.com/" target="_blank">Craft Link List</a><br><small>Stay in-the-know.</small></li>
+                    <li><a href="https://nystudio107.com/blog" target="_blank">nystudio107 Blog</a><br><small>Learn Craft and modern web development.</small></li>
                 </ul>
             </div>
         </div>
