Update Tailwind to ^1.0.0

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -9,7 +9,7 @@
   {{ craft.twigpack.includeCssModule("app.css", true) }}
 </head>
 
-<body class="bg-grey-darkest">
+<body class="bg-gray-700">
   <div id="app">
     
     {% set info = {
