--- a/src/components/custom/components/btn.css
+++ b/src/components/custom/components/btn.css
@@ -1,11 +1,9 @@
-$blue: rgb(0,0,255);
-
 .btn {
   @apply inline-block px-6 py-3 rounded;
 }
 .btn--blue {
   @apply bg-blue-500 text-white;
   &:hover {
-    background-color: $blue;
+    @apply bg-blue-700;
   }
 }
